4.2.1 Stream. clean